--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,8 @@ jobs:
 
       - name: Build step
         run: "deno task build"
+        env:
+          NTFY_TOPIC: ${{ secrets.NTFY_TOPIC }}
 
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
@@ -32,5 +34,7 @@ jobs:
           project: "portfolio-me"
           entrypoint: "main.ts"
           root: "."
+        env:
+          NTFY_TOPIC: ${{ secrets.NTFY_TOPIC }}
           
           
