--- a/deno.json
+++ b/deno.json
@@ -22,6 +22,7 @@
   ],
   "imports": {
     "$fresh/": "https://deno.land/x/fresh@1.7.3/",
+    "@lucide/lab": "npm:@lucide/lab@^0.1.2",
     "lucide-preact": "npm:lucide-preact@^0.475.0",
     "preact": "https://esm.sh/preact@10.22.0",
     "preact/": "https://esm.sh/preact@10.22.0/",
